--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV.fetch("DATABASE_USERNAME") { "djo" } %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") { "cicibu" } %>
 
 development:
   <<: *default
@@ -13,4 +15,6 @@ test:
 
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  database: booking_production
+  username: booking
+  password: <%= ENV["BOOKING_DATABASE_PASSWORD"] %>
